# server/docs/openAPI.yml
@@ -181,6 +181,39 @@ paths:
               schema:
                 type: string
               example: "Malformed token"
+  /user/all:
+    get:
+      summary: Get all users
+      operationId: getAllUsers
+      tags:
+        - User
+      security:
+        - bearerAuth: []
+      responses:
+        "200":
+          description: User deleted successfully
+          content:
+            text/plain:
+              schema:
+                type: string
+              example: "User deleted successfully"
+        "404":
+          description: No user with id that is inside the token
+          content:
+            text/plain:
+              schema:
+                type: string
+              examples:
+                user_not_found:
+                  summary: User does not exist
+                  value: "User not found"
+        "401":
+          description: Invalid token
+          content:
+            text/plain:
+              schema:
+                type: string
+              example: "Malformed token"
 
   /chats/:
     get:
